[tool.poetry]
name = "sfm"
version = "0.1.0"
description = ""
authors = ["Fred Pirani <freonius@gmail.com>"]
readme = "README.md"
packages = [{ include = "sfm", from = "." }]
repository = "https://github.com/Freonius/sfm"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34.19"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"
pylint = "^2.16.3"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
autopep8 = "^2.0.2"
pytest-xdist = "^3.2.0"
poethepoet = "^0.18.1"
pdoc = "^13.0.0"
interrogate = "^1.5.0"
coverage-badge = "^1.1.0"
mypy = "^1.0.1"
pre-commit = "^3.1.1"
black = "^23.1.0"
ruff = "^0.1.9"
otf2ttf = "^0.2"
cythonizer = "^1.2.0b3"
pyre-check = "^0.9.19"
bandit = "^1.7.6"
aws-lambda-typing = "^2.18.0"
codecov-cli = "^0.4.4"
boto3-type-annotations = "^0.3.1"
moto = { extras = [
    "cloudwatch",
    "dynamodb",
    "iam",
    "lambda",
    "logs",
    "s3",
    "ses",
], version = "^5.0.2" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Pytest

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=./sfm/ --cov-report=xml:./coverage/report.xml --cov-report=html:./coverage/report"
testpaths = ["tests"]

# Documentation

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 90
exclude = ["setup.py", "docs", "build", "tests", "alembic"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 1
quiet = false
whitelist-regex = []
color = true
omit-covered-files = false
generate-badge = "./"
badge-style = "for-the-badge"
badge-format = "svg"

# Linting

[tool.pylint]
ignore = ["tests"]
ignore-paths = []
disable = [
    "consider-iterating-dictionary",
    "too-many-branches",
    "too-many-statements",
    "logging-fstring-interpolation",
]
ignore-patterns = ["test_.*"]
fail-under = 9

[tool.mypy]
exclude = ["tests/.*\\.py", "aws/api-gateway.py"]
warn_return_any = true
warn_unused_configs = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_untyped_calls = true
strict = true
warn_unreachable = true
warn_no_return = true
warn_unused_ignores = true
# enable_incomplete_feature = ["Unpack"]

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
    "manuzio.*",
    "beautifulsoup4.*",
    "bs4.*",
    "reportlab.*",
    "pyphen.*",
    "barcode.*",
    "jose.*",
    "six.*",
    "passlib.*",
    "PIL.*",
    "yaml.*",
    "mammoth.*",
    "lesscpy.*",
    "boto3_type_annotations.*",
    "boto3.*",
    "botocore.*",
]


[tool.ruff]
select = [
    "E",
    "F",
    "B",
    "PL",
    "D101",
    "D103",
    "D102",
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    "C",
]
unfixable = ["B"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
    "*.pyi",
]
line-length = 100
[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
